--- a/src/agendar/citas/GUI.form
+++ b/src/agendar/citas/GUI.form
@@ -269,6 +269,9 @@
           <Image iconType="3" name="/Icons/iconfinder_contacts_216165.png"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel8">
       <Properties>
